[package]
name = "polkadot-test-service"
version = "0.8.2"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
futures = "0.3.4"
futures01 = { package = "futures", version = "0.1.29" }
hex = "0.4"
log = "0.4.8"
rand = "0.7.3"
tempfile = "3.1.0"

# Polkadot dependencies
av_store = { package = "polkadot-availability-store", path = "../../availability-store" }
consensus = { package = "polkadot-validation", path = "../../validation" }
polkadot-network = { path = "../../network" }
polkadot-primitives = { path = "../../primitives" }
polkadot-rpc = { path = "../../rpc" }
polkadot-runtime-common = { path = "../../runtime/common" }
polkadot-service = { path = "../../service" }
polkadot-test-runtime = { path = "../../runtime/test-runtime" }

# Substrate dependencies
authority-discovery = { package = "sc-authority-discovery", git = "https://github.com/paritytech/substrate", branch = "cecton-fix-int-test-again" }
babe = { package = "sc-consensus-babe", git = "https://github.com/paritytech/substrate", branch = "cecton-fix-int-test-again" }
babe-primitives = { package = "sp-consensus-babe", git = "https://github.com/paritytech/substrate", branch = "cecton-fix-int-test-again" }
consensus_common = { package = "sp-consensus", git = "https://github.com/paritytech/substrate", branch = "cecton-fix-int-test-again" }
frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "cecton-fix-int-test-again" }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "cecton-fix-int-test-again" }
grandpa = { package = "sc-finality-grandpa", git = "https://github.com/paritytech/substrate", branch = "cecton-fix-int-test-again" }
grandpa_primitives = { package = "sp-finality-grandpa", git = "https://github.com/paritytech/substrate", branch = "cecton-fix-int-test-again" }
inherents = { package = "sp-inherents", git = "https://github.com/paritytech/substrate", branch = "cecton-fix-int-test-again" }
pallet-staking = { git = "https://github.com/paritytech/substrate", branch = "cecton-fix-int-test-again" }
pallet-transaction-payment = { git = "https://github.com/paritytech/substrate", branch = "cecton-fix-int-test-again" }
sc-chain-spec = { git = "https://github.com/paritytech/substrate", branch = "cecton-fix-int-test-again" }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "cecton-fix-int-test-again" }
sc-consensus = { git = "https://github.com/paritytech/substrate", branch = "cecton-fix-int-test-again" }
sc-executor = { git = "https://github.com/paritytech/substrate", branch = "cecton-fix-int-test-again" }
sc-informant = { git = "https://github.com/paritytech/substrate", branch = "cecton-fix-int-test-again" }
sc-network = { git = "https://github.com/paritytech/substrate", branch = "cecton-fix-int-test-again" }
sc-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "cecton-fix-int-test-again" }
service = { package = "sc-service", git = "https://github.com/paritytech/substrate", branch = "cecton-fix-int-test-again", default-features = false }
sp-arithmetic = { git = "https://github.com/paritytech/substrate", branch = "cecton-fix-int-test-again" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "cecton-fix-int-test-again" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "cecton-fix-int-test-again" }
sp-keyring = { git = "https://github.com/paritytech/substrate", branch = "cecton-fix-int-test-again" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "cecton-fix-int-test-again" }
sp-state-machine = { git = "https://github.com/paritytech/substrate", branch = "cecton-fix-int-test-again" }
substrate-test-client = { git = "https://github.com/paritytech/substrate", branch = "cecton-fix-int-test-again" }

[dev-dependencies]
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "cecton-fix-int-test-again", default-features = false }
serde_json = "1.0"
tokio = { version = "0.2", features = ["macros"] }
