[package]
name = "westend-runtime"
version = "0.8.22"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
build = "build.rs"

[dependencies]
bitvec = { version = "0.17.4", default-features = false, features = ["alloc"] }
codec = { package = "parity-scale-codec", version = "1.3.4", default-features = false, features = ["derive"] }
log = { version = "0.3.9", optional = true }
rustc-hex = { version = "2.0.1", default-features = false }
serde = { version = "1.0.102", default-features = false }
serde_derive = { version = "1.0.102", optional = true }
smallvec = "1.4.1"
static_assertions = "1.1.0"

authority-discovery-primitives = { package = "sp-authority-discovery", git = "file:///home/cecile/repos/substrate", branch = "rococo-branch", default-features = false }
babe-primitives = { package = "sp-consensus-babe", git = "file:///home/cecile/repos/substrate", branch = "rococo-branch", default-features = false }
sp-api = { git = "file:///home/cecile/repos/substrate", branch = "rococo-branch", default-features = false }
inherents = { package = "sp-inherents", git = "file:///home/cecile/repos/substrate", branch = "rococo-branch", default-features = false }
offchain-primitives = { package = "sp-offchain", git = "file:///home/cecile/repos/substrate", branch = "rococo-branch", default-features = false }
sp-std = { package = "sp-std", git = "file:///home/cecile/repos/substrate", branch = "rococo-branch", default-features = false }
sp-io = { git = "file:///home/cecile/repos/substrate", branch = "rococo-branch", default-features = false }
sp-runtime = { git = "file:///home/cecile/repos/substrate", branch = "rococo-branch", default-features = false }
sp-staking = { git = "file:///home/cecile/repos/substrate", branch = "rococo-branch", default-features = false }
sp-core = { git = "file:///home/cecile/repos/substrate", branch = "rococo-branch", default-features = false }
sp-session = { git = "file:///home/cecile/repos/substrate", branch = "rococo-branch", default-features = false }
version = { package = "sp-version", git = "file:///home/cecile/repos/substrate", branch = "rococo-branch", default-features = false }
tx-pool-api = { package = "sp-transaction-pool", git = "file:///home/cecile/repos/substrate", branch = "rococo-branch", default-features = false }
block-builder-api = { package = "sp-block-builder", git = "file:///home/cecile/repos/substrate", branch = "rococo-branch", default-features = false }

authority-discovery = { package = "pallet-authority-discovery", git = "file:///home/cecile/repos/substrate", branch = "rococo-branch", default-features = false }
authorship = { package = "pallet-authorship", git = "file:///home/cecile/repos/substrate", branch = "rococo-branch", default-features = false }
babe = { package = "pallet-babe", git = "file:///home/cecile/repos/substrate", branch = "rococo-branch", default-features = false }
balances = { package = "pallet-balances", git = "file:///home/cecile/repos/substrate", branch = "rococo-branch", default-features = false }
transaction-payment = { package = "pallet-transaction-payment", git = "file:///home/cecile/repos/substrate", branch = "rococo-branch", default-features = false }
transaction-payment-rpc-runtime-api = { package = "pallet-transaction-payment-rpc-runtime-api", git = "file:///home/cecile/repos/substrate", branch = "rococo-branch", default-features = false }
collective = { package = "pallet-collective", git = "file:///home/cecile/repos/substrate", branch = "rococo-branch", default-features = false }
democracy = { package = "pallet-democracy", git = "file:///home/cecile/repos/substrate", branch = "rococo-branch", default-features = false }
elections-phragmen = { package = "pallet-elections-phragmen", git = "file:///home/cecile/repos/substrate", branch = "rococo-branch", default-features = false }
executive = { package = "frame-executive", git = "file:///home/cecile/repos/substrate", branch = "rococo-branch", default-features = false }
finality-tracker = { package = "pallet-finality-tracker", git = "file:///home/cecile/repos/substrate", branch = "rococo-branch", default-features = false }
grandpa = { package = "pallet-grandpa", git = "file:///home/cecile/repos/substrate", branch = "rococo-branch", default-features = false }
identity = { package = "pallet-identity", git = "file:///home/cecile/repos/substrate", branch = "rococo-branch", default-features = false }
im-online = { package = "pallet-im-online", git = "file:///home/cecile/repos/substrate", branch = "rococo-branch", default-features = false }
indices = { package = "pallet-indices", git = "file:///home/cecile/repos/substrate", branch = "rococo-branch", default-features = false }
membership = { package = "pallet-membership", git = "file:///home/cecile/repos/substrate", branch = "rococo-branch", default-features = false }
multisig = { package = "pallet-multisig", git = "file:///home/cecile/repos/substrate", branch = "rococo-branch", default-features = false }
nicks = { package = "pallet-nicks", git = "file:///home/cecile/repos/substrate", branch = "rococo-branch", default-features = false }
offences = { package = "pallet-offences", git = "file:///home/cecile/repos/substrate", branch = "rococo-branch", default-features = false }
proxy = { package = "pallet-proxy", git = "file:///home/cecile/repos/substrate", branch = "rococo-branch", default-features = false }
randomness-collective-flip = { package = "pallet-randomness-collective-flip", git = "file:///home/cecile/repos/substrate", branch = "rococo-branch", default-features = false }
recovery = { package = "pallet-recovery", git = "file:///home/cecile/repos/substrate", branch = "rococo-branch", default-features = false }
scheduler = { package = "pallet-scheduler", git = "file:///home/cecile/repos/substrate", branch = "rococo-branch", default-features = false }
session = { package = "pallet-session", git = "file:///home/cecile/repos/substrate", branch = "rococo-branch", default-features = false }
society = { package = "pallet-society", git = "file:///home/cecile/repos/substrate", branch = "rococo-branch", default-features = false }
frame-support = { git = "file:///home/cecile/repos/substrate", branch = "rococo-branch", default-features = false }
staking = { package = "pallet-staking", git = "file:///home/cecile/repos/substrate", branch = "rococo-branch", default-features = false }
pallet-staking-reward-curve = { package = "pallet-staking-reward-curve", git = "file:///home/cecile/repos/substrate", branch = "rococo-branch" }
sudo = { package = "pallet-sudo", git = "file:///home/cecile/repos/substrate", branch = "rococo-branch", default-features = false }
system = { package = "frame-system", git = "file:///home/cecile/repos/substrate", branch = "rococo-branch", default-features = false }
system_rpc_runtime_api = { package = "frame-system-rpc-runtime-api", git = "file:///home/cecile/repos/substrate", branch = "rococo-branch", default-features = false }
timestamp = { package = "pallet-timestamp", git = "file:///home/cecile/repos/substrate", branch = "rococo-branch", default-features = false }
treasury = { package = "pallet-treasury", git = "file:///home/cecile/repos/substrate", branch = "rococo-branch", default-features = false }
utility = { package = "pallet-utility", git = "file:///home/cecile/repos/substrate", branch = "rococo-branch", default-features = false }
vesting = { package = "pallet-vesting", git = "file:///home/cecile/repos/substrate", branch = "rococo-branch", default-features = false }

frame-benchmarking = { git = "file:///home/cecile/repos/substrate", branch = "rococo-branch", default-features = false, optional = true }
frame-system-benchmarking = { git = "file:///home/cecile/repos/substrate", branch = "rococo-branch", default-features = false, optional = true }
pallet-offences-benchmarking = { git = "file:///home/cecile/repos/substrate", branch = "rococo-branch", default-features = false, optional = true }
pallet-session-benchmarking = { git = "file:///home/cecile/repos/substrate", branch = "rococo-branch", default-features = false, optional = true }
hex-literal = { version = "0.2.1" }

runtime-common = { package = "polkadot-runtime-common", path = "../common", default-features = false }
primitives = { package = "polkadot-primitives", path = "../../primitives", default-features = false }
polkadot-parachain = { path = "../../parachain", default-features = false }

[dev-dependencies]
hex-literal = "0.2.1"
libsecp256k1 = "0.3.2"
tiny-keccak = "1.5.0"
keyring = { package = "sp-keyring", git = "file:///home/cecile/repos/substrate", branch = "rococo-branch" }
sp-trie = { git = "file:///home/cecile/repos/substrate", branch = "rococo-branch" }
serde_json = "1.0.41"

[build-dependencies]
wasm-builder-runner = { package = "substrate-wasm-builder-runner", version = "1.0.6" }

[features]
default = ["std"]
no_std = []
only-staking = []
std = [
	"authority-discovery-primitives/std",
	"authority-discovery/std",
	"bitvec/std",
	"primitives/std",
	"rustc-hex/std",
	"codec/std",
	"inherents/std",
	"sp-core/std",
	"polkadot-parachain/std",
	"sp-api/std",
	"tx-pool-api/std",
	"block-builder-api/std",
	"offchain-primitives/std",
	"sp-std/std",
	"sp-io/std",
	"frame-support/std",
	"authorship/std",
	"balances/std",
	"transaction-payment/std",
	"transaction-payment-rpc-runtime-api/std",
	"collective/std",
	"elections-phragmen/std",
	"democracy/std",
	"executive/std",
	"finality-tracker/std",
	"grandpa/std",
	"identity/std",
	"im-online/std",
	"indices/std",
	"membership/std",
	"multisig/std",
	"nicks/std",
	"offences/std",
	"proxy/std",
	"recovery/std",
	"sp-runtime/std",
	"sp-staking/std",
	"scheduler/std",
	"session/std",
	"society/std",
	"staking/std",
	"sudo/std",
	"system/std",
	"system_rpc_runtime_api/std",
	"timestamp/std",
	"treasury/std",
	"version/std",
	"utility/std",
	"vesting/std",
	"serde_derive",
	"serde/std",
	"log",
	"babe/std",
	"babe-primitives/std",
	"sp-session/std",
	"randomness-collective-flip/std",
	"runtime-common/std",
]
runtime-benchmarks = [
	"runtime-common/runtime-benchmarks",
	"frame-benchmarking",
	"frame-support/runtime-benchmarks",
	"frame-system-benchmarking",
	"system/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
	"balances/runtime-benchmarks",
	"collective/runtime-benchmarks",
	"democracy/runtime-benchmarks",
	"elections-phragmen/runtime-benchmarks",
	"identity/runtime-benchmarks",
	"im-online/runtime-benchmarks",
	"scheduler/runtime-benchmarks",
	"society/runtime-benchmarks",
	"staking/runtime-benchmarks",
	"timestamp/runtime-benchmarks",
	"treasury/runtime-benchmarks",
	"utility/runtime-benchmarks",
	"vesting/runtime-benchmarks",
	"pallet-offences-benchmarking",
	"pallet-session-benchmarking",
	# uncomment when it is made optional again
	# "hex-literal",
]
# When enabled, the runtime api will not be build.
#
# This is required by Cumulus to access certain types of the
# runtime without clashing with the runtime api exported functions
# in WASM.
disable-runtime-api = []
