[package]
name = "polkadot-test-runtime-client"
version = "2.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
license = "GPL-3.0"

[dependencies]
sc-block-builder = { git = "https://github.com/paritytech/substrate", branch = "mxinden-auth-disc-leak" }
substrate-test-client = { git = "https://github.com/paritytech/substrate", branch = "mxinden-auth-disc-leak" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "mxinden-auth-disc-leak" }
polkadot-test-runtime = { path = ".." }
substrate-test-runtime = { git = "https://github.com/paritytech/substrate", branch = "mxinden-auth-disc-leak" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "mxinden-auth-disc-leak" }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "mxinden-auth-disc-leak" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "mxinden-auth-disc-leak" }
codec = { package = "parity-scale-codec", version = "1.0.0" }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "mxinden-auth-disc-leak" }
sc-client = { git = "https://github.com/paritytech/substrate", branch = "mxinden-auth-disc-leak" }
futures = "0.3.1"
