[package]
name = "polkadot-test-runtime-client"
version = "2.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
license = "GPL-3.0"

[dependencies]
sc-block-builder = { git = "https://github.com/mxinden/substrate", branch = "network-gossip-bounded" }
sc-consensus = { git = "https://github.com/mxinden/substrate", branch = "network-gossip-bounded" }
sc-service = { git = "https://github.com/mxinden/substrate", branch = "network-gossip-bounded", features = ["test-helpers"],  default-features = false }
substrate-test-client = { git = "https://github.com/mxinden/substrate", branch = "network-gossip-bounded" }
sp-core = { git = "https://github.com/mxinden/substrate", branch = "network-gossip-bounded" }
polkadot-test-runtime = { path = ".." }
polkadot-runtime-common = { path = "../../common" }
polkadot-primitives = { path = "../../../primitives" }
sp-runtime = { git = "https://github.com/mxinden/substrate", branch = "network-gossip-bounded" }
sp-api = { git = "https://github.com/mxinden/substrate", branch = "network-gossip-bounded" }
sp-blockchain = { git = "https://github.com/mxinden/substrate", branch = "network-gossip-bounded" }
codec = { package = "parity-scale-codec", version = "1.0.0" }
sc-client-api = { git = "https://github.com/mxinden/substrate", branch = "network-gossip-bounded" }
pallet-timestamp = { git = "https://github.com/mxinden/substrate", branch = "network-gossip-bounded" }
futures = "0.3.1"
