[package]
name = "polkadot-test-runtime-client"
version = "2.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
license = "GPL-3.0"

[dependencies]
futures = "0.3.1"
codec = { package = "parity-scale-codec", version = "1.3.4" }

# Polkadot dependencies
polkadot-primitives = { path = "../../../primitives" }
polkadot-runtime-common = { path = "../../common" }
polkadot-test-runtime = { path = ".." }
polkadot-test-service = { path = "../../../node/test-service" }

# Substrate dependencies
pallet-timestamp = { git = "file:///home/cecile/repos/substrate", branch = "rococo-branch" }
sc-block-builder = { git = "file:///home/cecile/repos/substrate", branch = "rococo-branch" }
sc-client-api = { git = "file:///home/cecile/repos/substrate", branch = "rococo-branch" }
sc-consensus = { git = "file:///home/cecile/repos/substrate", branch = "rococo-branch" }
sc-light = { git = "file:///home/cecile/repos/substrate", branch = "rococo-branch" }
sc-service = { git = "file:///home/cecile/repos/substrate", branch = "rococo-branch", features = ["test-helpers"],  default-features = false }
sp-api = { git = "file:///home/cecile/repos/substrate", branch = "rococo-branch" }
sp-blockchain = { git = "file:///home/cecile/repos/substrate", branch = "rococo-branch" }
sp-core = { git = "file:///home/cecile/repos/substrate", branch = "rococo-branch" }
sp-runtime = { git = "file:///home/cecile/repos/substrate", branch = "rococo-branch" }
substrate-test-client = { git = "file:///home/cecile/repos/substrate", branch = "rococo-branch" }
